--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Asmaa Hadir
 theme: jekyll-theme-minimal
-logo: /assets/professional_picture.png
+logo: /assets/circle_pic.png
 #description: 
